[package]
name = "todolist"
version = "0.3.4"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
cursive = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.0"
log = "0.4.22"
directories = "5.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.1"

[patch.crates-io]
# this one removes extraneous debug logs
cursive = { git = "https://github.com/JimmyCabbage/cursive.git" }
